<resources>
    <string name="app_name">MadCal</string>
    <string name="data">DATA</string>
    <string name="title_home">Music</string>
    <string name="title_amusement">Sport</string>

    <string name="title_calendar">Calendar</string>

    <string name="title_mine">Food</string>
    <string name="title_notifications">Settings</string>

    <!-- Home Screen Texts -->
    <string name="title_text">MadCal</string>
    <string name="subtitle_text">your customized events\ncalendar assistant</string>
    <string name="selection_button_text">Selection</string>
    <string name="download_button_text">Download Calendar</string>
    <string name="downloading">DOWNLOADING...</string>
    <string name="download_complete">Download Complete</string>
    <string name="download_progress">Download Progress %1$d%%</string>
    <!-- Toast Messages -->
    <string name="toast_selection_clicked">Selection button clicked</string>
    <string name="toast_download_clicked">Download Calendar button clicked</string>
    <string name="toast_calendar_icon_clicked">Calendar icon clicked</string>
    <string name="toast_settings_icon_clicked">Settings icon clicked</string>
    <!-- Confirmation Page -->
    <string name="confirm_permission_title">Confirm Permission</string>
    <string name="confirm_permission_message">Allow MadCal to modify your phone?</string>
    <string name="no_button_text">No</string>
    <string name="yes_button_text">Yes</string>
    <string name="close_dialog">Close dialog</string>
    <!-- Access Denied Dialog -->
    <string name="access_denied_title">Access Denied</string>
    <string name="access_denied_message">Unfortunately, we cannot provide full service to you right now. You can edit the permission later in settings.</string>
    <string name="ok_button_text">OK</string>
</resources>