<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/dialog_background"
    app:layout_constraintWidth_min="280dp"
    app:layout_constraintHeight_min="180dp"
    android:layout_gravity="center_horizontal"
    >

    <!-- Title -->
    <TextView
        android:id="@+id/permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_permission_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        />

    <!-- Message -->
    <TextView
        android:id="@+id/permission_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_permission_message"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/permission_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/permission_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_button_text"
            android:backgroundTint="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button_text"
            android:backgroundTint="@android:color/black"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
