<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Title Text -->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/title_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <!-- Subtitle Text -->
    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/subtitle_text"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="center" />

    <!-- Selection Button -->
    <Button
        android:id="@+id/selection_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/selection_button_text"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@android:color/white" />

    <!-- Download Calendar Button -->
    <Button
        android:id="@+id/download_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/selection_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/download_button_text"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@android:color/white" />

    <!-- Bottom Navigation Icons -->
    <ImageView
        android:id="@+id/calendar_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_calendar" />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_settings" />

</RelativeLayout>
